<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".CredentialActivity" >

        <EditText
            android:id="@+id/unamefld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/uname"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/pass1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/uname"
            android:layout_below="@+id/unamefld"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:text="@string/pass"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/passfld1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/unamefld"
            android:layout_below="@+id/pass1"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:inputType="textPassword" >
        </EditText>

        <Button
            android:id="@+id/credcanbut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/credokbut"
            android:layout_alignBottom="@+id/credokbut"
            android:layout_alignRight="@+id/passfld1"
            android:onClick="onButClick"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/credokbut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/unamefld"
            android:layout_below="@+id/passfld1"
            android:layout_marginTop="44dp"
            android:onClick="onButClick"
            android:text="@android:string/ok" />

        <TextView
            android:id="@+id/uname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:text="@string/uname"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <CheckBox
            android:id="@+id/cloudtoggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/cloud" />
    </RelativeLayout>

</ScrollView>